# baxter_pickup

./: .gitignore  CMakeLists.txt  package.xml
include/: baxter_ik.h  block.h
launch/: baxter_pickup.launch
models/block/: model.urdf
models/cafe_table/: model.xml
models/trash_can/: model-1_4.sdf  model.config  model.sdf
models/trash_can/meshes/: model.dae
scripts/: baxter_pickup_gazebo.py
src/: baxter_block_tracker.cpp  baxter_ik_service.cpp
